ProdIND/ProdPrograms/force-app/main/default/objects/System_Constant_custom_metadata__mdt/System_Constant_custom_metadata__mdt.object-meta.xml
<CustomObject>
    <label>System Constant</label>
    <pluralLabel>System Constants</pluralLabel>
</CustomObject>