ProdIND/ProdPrograms/force-app/main/default/objects/System_Constant_custom_metadata__mdt/fields/Check_Eligibility_attempts__c.field-meta.xml
<CustomField>
    <fullName>Check_Eligibility_attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Check_Eligibility_attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>