ProdIND/ProdPrograms/force-app/main/default/objects/System_Constant_custom_metadata__mdt/fields/Delay_Time_in_milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Delay_Time_in_milliseconds__c</fullName>
    <label>Delay Time in milliseconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>