ProdIND/ProdPrograms/force-app/main/default/objects/System_Constant_custom_metadata__mdt/fields/GstPercentage__c.field-meta.xml
<CustomField>
    <fullName>GstPercentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GstPercentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>