ProdIND/ProdPrograms/force-app/main/default/objects/System_Constant_custom_metadata__mdt/fields/Min_allowed_threshold__c.field-meta.xml
<CustomField>
    <fullName>Min_allowed_threshold__c</fullName>
    <label>Min allowed threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>