ProdIND/ProdPrograms/force-app/main/default/objects/System_Constant_custom_metadata__mdt/fields/Number_Of_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Attempts__c</fullName>
    <label>Number Of Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>