ProdIND/ProdPrograms/force-app/main/default/objects/System_Constant_custom_metadata__mdt/fields/Selfie_retry_attempts__c.field-meta.xml
<CustomField>
    <fullName>Selfie_retry_attempts__c</fullName>
    <label>Selfie retry attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>